# cross_modal_neural_encoding

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
configs/: extract_embeddings.yaml
configs/modeling/: extract_embeddings.yaml  neural_encoding.yaml  predict_modalities.yaml  residual_encoding.yaml  residual_encoding_fmri.yaml  structural_probing.yaml
configs/visualization/: visualize_encoding_results.yaml  visualize_glmsingle_mask.yaml  visualize_noise_ceiling.yaml  visualize_predict_modalities.yaml  visualize_residual_encoding.yaml  visualize_residual_encoding_fmri.yaml
cross_modal_neural_encoding/: __init__.py  dataset.py  features.py  plots.py  utils.py
cross_modal_neural_encoding/modeling/: datasets.py  extract_embeddings.py  neural_encoding.py  predict.py  predict_modalities.py  residual_encoding.py  structural_probing.py  train.py
cross_modal_neural_encoding/visualization/: visualize_encoding_results.py  visualize_glmsingle_mask.py  visualize_noise_ceiling.py  visualize_predict_modalities.py  visualize_residual_encoding.py  visualize_structural_probing.py
docs/: 01_scientific_context.md  02_datasets.md  03_feature_extraction.md  04_neural_encoding.md  05_evaluation_and_statistics.md  05_residual_encoding.md  05_structural_analysis.md  06_residual_encoding.md  06_visualization.md  07_models.md  08_configuration.md  09_configuration.md  09_visualization.md  10_predict_modalities.md  10_visualization.md  11_predict_modalities.md  index.md  mkdocs.yml
docs/docs/: index.md
