[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cross_modal_neural_encoding"
version = "0.0.1"
description = "Cross-Modal Neural Encoding Project."
authors = [
  { name = "Helena Balabin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ants>=0.0.7",
    "datasets>=4.6.1",
    "dotenv>=0.9.9",
    "himalaya>=0.4.11",
    "hydra-core>=1.3.2",
    "loguru",
    "matplotlib>=3.10.8",
    "mkdocs",
    "nilearn>=0.13.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm",
    "transformers>=5.2.0",
    "typer",
    "voxelwise-tutorials>=0.2.3",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["cross_modal_neural_encoding"]
include = ["pyproject.toml", "cross_modal_neural_encoding/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cross_modal_neural_encoding"]
force-sort-within-sections = true

